Fix review issues: path consistency, oracle read-only, dynamic search
- Fix librarian.md: update /tmp paths to .claude/plugins/trivial/
- Fix oracle.md: remove write instructions (oracle is read-only)
- Fix reviewer.md: remove misleading 'read-only' label
- Update docs/architecture.md version to 0.4.0
- Simplify .gitignore to ignore entire .claude/plugins/trivial/
- Make search.py dynamically discover agent subdirectories

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 .tissue/
-.claude/plugins/trivial/librarian/
-.claude/plugins/trivial/reviewer/
-.claude/plugins/trivial/oracle/
+.claude/plugins/trivial/
